--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+[x-cloak]{
+    display: none !important;
+}
 
 .comments-container::before{
     position: absolute;
