--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -53,7 +53,7 @@
     border: 7px solid white;
     box-shadow: 4px 4px 15px 0 rgba(36, 37, 38, 0.08);
     left: -58px;
-    background: theme('colors.purple.500');
+    background: theme('colors.purple');
     opacity: 1;
     border: skyblue solid 2px;
 }
